[package]
name = "be-gateway"
version = "0.1.4"
edition = "2021"

[dependencies]
solana-client = "=2.3.1"
solana-sdk = "=2.3.1"
solana-runtime = { version = "=2.3.1", default-features = false }
solana-ledger  = "=2.3.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.11", features = ["transport", "tls"] }
async-trait = "0.1"
tracing = "0.1"
be-proto = { path = "../proto" }
be-core  = { path = "../core" }
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1.0"
rand = "0.8"
prost-types = "0.12"
futures-util = "0.3"
base64 = "0.21"
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics"] }
jsonwebtoken = { version = "9.3", default-features = false }
ed25519-dalek = { version = "2.2", default-features = false, features = ["std", "rand_core", "pkcs8"] }
bincode = "1.3"
prometheus = { version = "0.13", features = ["process"] }
warp = "0.3"
tokio-util = { version = "0.7", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
hashbrown = "0.14"
rocksdb = "0.23.0"